engine/codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__stopped_hook_hides_model_context_and_preserves_stop_reason.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: history
---
• Hook stopped
  └ The hook stopped this turn for an important reason.
    This second line must remain visible in full.
