engine/codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__strict_review_required.snap
---
source: tui/src/chatwidget/tests/app_server.rs
expression: "lines_to_single_string(&cells[0])"
---
⚠ This request requires additional safety checks, some tool calls might take
  extra time
