engine/codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__terminal_title_model_display_name.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: "chat.last_terminal_title.as_deref().expect(\"terminal title\")"
---
GPT-5.5
